Fixes for footer fix on mobile

--- a/www/assets/sass/_common.scss
+++ b/www/assets/sass/_common.scss
@@ -51,6 +51,7 @@
     @include ui-clearfix();
     @include mobile {
         margin-top: 0;
+        padding-bottom: 1em;
     }
 
     .no_section_menu & {
@@ -61,7 +62,15 @@
       min-height: 100%;  //for keeping the footer at bottom of page
     }
 
+    @include mobile {
+        &.wrap {
+        min-height: inherit;  //for keeping the footer at bottom of page
+    }
+    }
+
  }
+
+
 
 
 
