--- a/www/assets/sass/layouts/_layouts-neue.scss
+++ b/www/assets/sass/layouts/_layouts-neue.scss
@@ -27,6 +27,10 @@ body {
     @include desktop {
         @include box-sizing(border-box);
     }
+
+     @include mobile {
+        height: auto;
+     }
 }
 
 
